# openagentplatform

./: .env.example  .gitignore  .windsurfrules  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GAP_REMEDIATION_BRANCH.md  HEADER_MAP.md  INDEX_MAP.md  LICENSE  Makefile  PROJECT_PLAN.md  PROMPTING_GUIDE.md  QUICK_SETUP.md  README.md  STATUS.md  TOC.md  cpofopencode  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  test_export.csv  test_export.json
.github/: CODEOWNERS  SECRETS_MANAGEMENT.md  copilot-instructions.md
.guardrails/: web-ui-team-rules.json
.opencode/: oh-my-opencode.jsonc
.teams/: advisors.json  config.json  metrics.json  rules.json
a2a/: go.mod  go.sum
api/: openapi.yaml
ci/: Jenkinsfile  gitlab-ci.yml
deploy/: docker-compose.dev.yml  (+1 more)
docs/: API.md  (+46 more)
examples/python/: pyproject.toml
examples/python/config/: development.yaml  production.yaml  test.yaml
examples/python/game-tools/: README.md  arcade-ui-overlay.py  loot-table-visualizer.py
examples/python/src/config_loader/: __init__.py  exceptions.py  loader.py
examples/python/tests/: __init__.py  conftest.py  test_loader.py
examples/python/ui-dashboard/: README.md  dashboard.py  websocket-streaming.py
examples/rust/: Cargo.toml
examples/rust/bevy-ui-example/: README.md  ecs-ui-state.rs  main.rs  zero-copy-transfer.rs
examples/rust/config/: development.yaml  production.yaml  test.yaml
examples/rust/egui-overlay/: README.md  debug-overlay.rs  parallel-rendering.rs  wgpu-integration.rs
examples/rust/src/: lib.rs
py/: alembic.ini  pyproject.toml
py/alembic/: env.py
py/alembic/versions/: 0001_orgs_and_users.py  0002_clients_sites_agents.py  0003_checks.py  0004_alerts.py  0005_policies.py  0006_patches.py  0007_scripts.py  0008_audit.py  0009_indexes_and_views.py  0010_add_description_to_checks.py
py/oap/: __init__.py  app.py  db.py  settings.py
py/oap/adapters/: __init__.py  anthropic_adapter.py  api.py  api_models.py  autogen_adapter.py  cost.py  crewai_adapter.py  errors.py  human_loop.py  langgraph_adapter.py  openai_adapter.py  orchestrator.py  ozore_adapter.py  pool.py  pool_worker.py  semantic_kernel_adapter.py  types.py  wrapper.py
py/tests/: __init__.py  test_smoke.py
(+816 files in other folders)
