[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config-loader"
version = "0.1.0"
description = "Environment-aware configuration loader demonstrating guardrails-compliant patterns"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Example Author", email = "example@example.com" }
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/config_loader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/config_loader"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
